test/libhyperion/syntaxTests/types/function_types/function_state_mutability_fail.hyp
contract Test
{
  function internalPureFunc(uint256 x) internal pure returns (uint256) { return x; }
  function internalViewFunc(uint256 x) internal view returns (uint256) { return x; }
  function internalMutableFunc(uint256 x) internal returns (uint256) { return x; }

  function externalPureFunc(uint256 x) external pure returns (uint256) { return x; }
  function externalViewFunc(uint256 x) external view returns (uint256) { return x; }
  function externalPayableFunc(uint256 x) external payable returns (uint256) { return x; }
  function externalMutableFunc(uint256 x) external returns (uint256) { return x; }

  function funcTakesInternalPure(function(uint256) internal pure returns(uint256) a) internal returns (uint256) { return a(4); }
  function funcTakesInternalView(function(uint256) internal view returns(uint256) a) internal returns (uint256) { return a(4); }
  function funcTakesInternalMutable(function(uint256) internal returns(uint256) a) internal returns (uint256) { return a(4); }

  function funcTakesExternalPure(function(uint256) external pure returns(uint256) a) internal returns (uint256) { return a(4); }
  function funcTakesExternalView(function(uint256) external view returns(uint256) a) internal returns (uint256) { return a(4); }
  function funcTakesExternalPayable(function(uint256) external payable returns(uint256) a) internal returns (uint256) { return a(4); }
  function funcTakesExternalMutable(function(uint256) external returns(uint256) a) internal returns (uint256) { return a(4); }

  function tests() internal
  {
    funcTakesInternalPure(internalViewFunc); // view -> pure should fail
    funcTakesInternalPure(internalMutableFunc); // mutable -> pure should fail

    funcTakesInternalView(internalMutableFunc); // mutable -> view should fail

    funcTakesExternalPure(this.externalViewFunc); // view -> pure should fail
    funcTakesExternalPure(this.externalPayableFunc); // payable -> pure should fail
    funcTakesExternalPure(this.externalMutableFunc); // mutable -> pure should fail

    funcTakesExternalView(this.externalPayableFunc); // payable -> view should fail
    funcTakesExternalView(this.externalMutableFunc); // mutable -> view should fail

    funcTakesExternalPayable(this.externalPureFunc); // pure -> payable should fail
    funcTakesExternalPayable(this.externalViewFunc); // view -> payable should fail
    funcTakesExternalPayable(this.externalMutableFunc); // mutable -> payable should fail
  }
}
// ----
// TypeError 4888: (1034-1084): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
